src/test/resources/30/expanded/valid/svg-switch/OPS/content_001.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
	xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
	<head>
		<title>Minimal EPUB</title>
	</head>
	<body epub:type="bodymatter">
		<h1>Loomings</h1>
		<p>Call me Ishmael.</p>
		<svg:svg width="400px" height="300px" viewBox="0 0 400 300">
			<svg:switch>
				<svg:foreignObject width="100" height="50" requiredExtensions="http://www.idpf.org/2007/ops">
					<p xmlns="http://www.w3.org/1999/xhtml">foo</p>
				</svg:foreignObject>
				<svg:text font-size="10" font-family="Verdana">
					<svg:tspan x="10" y="10">bar</svg:tspan>
				</svg:text>
			</svg:switch>
		</svg:svg>
	</body>
</html>
