src/test/resources/30/expanded/invalid/remote-iframe-undeclared/OPS/content_001.xhtml
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
  <head>
    <title>Minimal EPUB</title>
  </head>
  <body>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/qlMuzbjMASo"></iframe>
  </body>
</html>
